cabal-version:      3.0
name:               biolang
version:            0.0.0.1
synopsis:           Bioinformatics Language
homepage:           https://github.com/isaac025/biolang
license:            GPL-2.0-only
license-file:       LICENSE
author:             Isaac Hiram Lopez Diaz
maintainer:         isaac.lopez@upr.com
category:           Language
build-type:         Simple
extra-doc-files:    
    CHANGELOG.md
    README.md

common warnings
    ghc-options: -Wall -Werror -Wcompat -Widentities -Wincomplete-uni-patterns -Wincomplete-record-updates -Wno-unused-top-binds -Wno-orphans -Wno-error=unrecognised-warning-flags

library
    import:           warnings
    exposed-modules: 
        Eval
        Parser
    -- other-modules:
    default-extensions:
        ImportQualifiedPost
        OverloadedStrings
    build-depends:    base ^>=4.17.2.1
                    , parsec
                    , containers
    hs-source-dirs:   src
    default-language: Haskell2010

executable biolang
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1,
        biolang

    hs-source-dirs:   app
    default-language: Haskell2010
